--- a/web/static/trash/exp02_copy.html
+++ b/web/static/trash/exp02_copy.html
@@ -14,7 +14,7 @@
 
 
     <!-- Template styles -->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- element-ui 引入样式 -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
@@ -23,11 +23,11 @@
 
     <!-- ============== js ================= -->
     <!-- vue.js -->
-    <script src="../static/js/vue.js"></script>
+    <script src="../js/vue.js"></script>
     <script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script>
 
     <!-- axios.js -->
-    <script src="../static/plugins/axios/axios-0.18.0.js"></script>
+    <script src="../plugins/axios/axios-0.18.0.js"></script>
 
     <!-- element-ui 组件库 -->
     <!-- 引入组件库 -->
