--- a/web/static/trash/exp03初始.html
+++ b/web/static/trash/exp03初始.html
@@ -46,46 +46,66 @@
         <!-- Main -->
         <el-main>
             <div class="main-contanier">
-                <div class="task-area">
+                <el-row :gutter="30">
+                    <el-col :span="12">
+                        <div class="task-area">
                     <div class="task-title">
-                        <h1>设定审计指标</h1>
+                        <h1>设定审计使用的公平性的指标</h1>
                     </div>
-                    <div class="task-content" >
-                        <div class="task-content-description">
-                            <p>描述....</p>
-                            <!-- 调用metric和parameter -->
-                            <p>......准则： [[metric]]</p>
-                            <p>......参数c： [[parameter_c]]</p>
 
+                <div class="task-content">
+                    <div class="task-form-description">
+                        <p>当 ① <b>两个样本特征差异足够小</b>，且 ② <b>模型对他们的分类结果不同</b>时，</p>
+                        <p>我们认为模型的分类结果不公平。因此，为了判断模型分类结果是否公平，我们需要一个指标来<b>量化两个样本间的特征差异</b>。</p>
+                        <p>衡量样本差异的指标应该满足如下特点：仅有敏感属性不同的一对样本可以认为<b>没有差异</b>。据此，我们提供了两类常用的衡量样本差异的指标，请您根据描述，选择您希望使用的指标：</p>
+                    </div>
+                    <div class="form-card">
+                        <div class="task-form-description">
+                        <el-radio v-model="form.metric" label="LR">LR距离
+                            <el-tooltip class="item" effect="light" content="Yurochkin M, Bower A, Sun Y. Training individually fair ML models with sensitive subspace robustness[J]. 2020." placement="right-start"><i class="el-icon-question"></i></el-tooltip>
+                            ：敏感属性不决定样本间差异，与敏感属性相关性越低的特征越能决定样本间差异大小。
+                        </el-radio>
+                        <el-radio v-model="form.metric" label="Eu">欧氏距离：敏感属性不决定样本间差异，其他特征对样本间差异的影响是相同的。</el-radio>
+                    </div>
+                    </div>
 
-                            <div class="block image-container">
-                                <el-image src="../static/images/standard.jpg" class="responsive-image"></el-image>
-                            </div>
-
-                            <!-- 选择适合的形式 -->
-                            <hr>
-                            <el-row :gutter="30">
-                                <el-col :span="12">
-                                    <div class="block image-container">
-                                        <el-image src="../static/images/standard.jpg" class="responsive-image"></el-image>
-                                    </div>
-                                </el-col>
-                                <el-col :span="12">
-                                    <div style="margin-top: 50px;">
-                                        <p>描述....</p>
-
-                                    </div>
-                                </el-col>
-                            </el-row>
-                            <p>描述.......</p>
-                        </div>
+                    <div class="task-form-description">
+                        <p>对同样的一对样本，基于两种距离运算结果会有细微差别。作为审计人员，若您对二者无偏好，则<b>建议选择LR距离</b>，因为它能够更好地刻画与敏感属性相关的特征给样本带来的变化。</p>
                     </div>
                 </div>
+            </div>
+                </el-col>
+                <el-col :span="12">
+                    <div class="task-area">
+                <div class="task-title">
+                    <h1>设定审计的严格程度</h1>
+                </div>
+                <div class="task-content">
+                    <div class="task-form-description">
+                        <p>基于前面选择的样本相似度指标，我们可以对两个样本分类结果是否公平做出如下判断：</p>
+                        <p>如果两个样本得到的分类结果不同，当这两个样本<b>差异足够小</b>（距离≤c）时，我们可以判定模型分类结果不公平。</p>
+                        <p>这里的参数c决定了审计的严格程度，c的值越小，审计对于不公平分类结果的界定越严格，即：越难以找到模型的不公平分类结果。</p>
+                        <p>
+                            为了使审计结果更具有说服力，审计人员应当设置一个较小的c值。
+                            <el-tooltip class="item" effect="light" content="推荐采用科学计数法表示形式，如：1e-2 = 0.01" placement="top-end"><i class="el-icon-question"></i></el-tooltip>
+
+                        </p>
+                    </div>
+                    <el-form :model="form" :rules="rules" ref="form">
+                        <el-form-item label="请您设定c的值（默认为10^-8）：" prop="parameter_c">
+                            <el-input v-model="form.parameter_c" placeholder="请输入值（建议小于10e-5）"></el-input>
+                        </el-form-item>
+                    </el-form>
+                </div>
+
+                </div>
+                    </el-col>
+                </el-row>
 
                 <div class="jump-area">
                     <div class="button-area">
 
-                        <el-button type="warning" @click="onSubmit">下一步</el-button>
+                        <el-button type="warning" @click="onSubmit('form')">下一步</el-button>
 
                     </div>
                 </div>
@@ -93,7 +113,7 @@
 
             </div>
 
-
+    
         </el-main>
 
     </el-container>
@@ -111,7 +131,6 @@
             });
         new Vue({
             el:"#app",
-            delimiters: ["[[", "]]"],
             data(){
                 return{
                     form:{
@@ -161,7 +180,7 @@
                     }
                 },
 
-                /*
+
                 onSubmit(){
                     this.$refs.form.validate((valid) => {
                         if(valid){
@@ -180,24 +199,6 @@
                     });
 
                 }
-
-                */
-                onSubmit(){
-                    let parameter_c_value = parseFloat(this.form.parameter_c);
-                    console.log(this.form.metric)
-                    axios.post("/api/exp03/",{dx: this.form.metric, eps: 1/ parameter_c_value}).then(resp =>{
-                        console.log(resp.data);
-                        window.location.href = '/page04/';
-                    }).catch(err =>{
-                        alert("发生错误")
-                    });
-
-
-
-                }
-
-
-
             }
         })
 
